--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             <p>We are committed to providing a reliable and respectful platform. While we rely on our community for data, we are continuously working on tools and features to improve data accuracy and make the contribution process as seamless as possible.</p>
             
             <div class="legal-links-container">
-                <a href="/privacy.html" class="legal-chip">Privacy Policy</a>
-                <a href="/terms.html" class="legal-chip">Terms of Use</a>
+                <a href="http://about.masjidconnect.ovh/terms/" class="legal-chip">Privacy Policy</a>
+                <a href="http://about.masjidconnect.ovh/privacy/" class="legal-chip">Terms of Use</a>
             </div>
 
             <div class="button-container">
