--- a/terms/index.html
+++ b/terms/index.html
@@ -215,7 +215,7 @@
             <p>These Terms shall be governed and construed in accordance with the laws of India, without regard to its conflict of law provisions. Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights.</p>
 
             <h2>9. Contact Us</h2>
-            <p>If you have any questions about these Terms, please contact us at <a href="mailto:help@masjidconnect.app">support@masjidconnect.app</a>.</p>
+            <p>If you have any questions about these Terms, please contact us at <a href="mailto:help@masjidconnect.app">help@masjidconnect.app</a>.</p>
         </main>
         
         <footer class="footer">
