--- a/privacy/index.html
+++ b/privacy/index.html
@@ -206,7 +206,7 @@
             <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Effective Date." You are advised to review this Privacy Policy periodically for any changes.</p>
 
             <h2>7. Contact Us</h2>
-            <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:help@masjidconnect.app">support@masjidconnect.app</a>.</p>
+            <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:help@masjidconnect.app">help@masjidconnect.app</a>.</p>
         </main>
         
         <footer class="footer">
